--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+*{
+    margine:0;
+    padding:0;
+}
 .NavBar{
     height: 4rem;
     width: 100%;
@@ -7,9 +11,13 @@
     align-items: center;
     
 }
+
   .Heading{
     margin-left: 1.5;
   }
+#page1{
+  height:100vh;
+}
 .Logo{
     margin-right: 7rem;
     height: 3rem;
